Fixed header search bar positioning on mobile

--- a/src/App.css
+++ b/src/App.css
@@ -202,7 +202,7 @@
 .button-text {
   font-family: 'OpenSans';
   text-transform: uppercase;
-  font-size: 1.5vh;
+  font-size: 1em;
   letter-spacing: 2px;
 }
 .button-icon {
@@ -674,6 +674,13 @@
   div.nav-menu-content-group {
     font-size: 4px;
   }
+  div.header-search-bar-wrapper {
+    margin-top: 3em;
+    position: absolute;
+  }
+  div.button-text {
+    font-size: 1rem;
+  }
 }
 
 @media screen and (max-width: 430px) {
@@ -721,6 +728,10 @@
   div.scroll-to-top {
     display: none;
     size: 3ch;
+  }
+  div.header-search-bar-wrapper {
+    margin-top: 3em;
+    position: absolute;
   }
 }
 
